package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_ns_archive",
     "ocaml_module",
)

PPX_OPTCOMP_LIGHT_DEPS = [
        "@ocaml//compiler-libs/common",
        "@ppxlib//lib/ppxlib"
]



#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(
    name       = "ppx_optcomp_light_lib",
    ns         = "ppx_optcomp_light",
    manifest = [
        ":Ppx_optcomp_light",
        ":Properties"
    ],
)

ocaml_module(
    name          = "Ppx_optcomp_light",
    struct        = "ppx_optcomp_light.ml",
    deps          = PPX_OPTCOMP_LIGHT_DEPS + [
        ":Properties"
    ],
)

ocaml_module(
    name          = "Properties",
    struct        = "properties.ml",
    deps          = PPX_OPTCOMP_LIGHT_DEPS,
)


