package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_archive",
     "ocaml_ns_archive",
     "ocaml_module",
)

DEPS_1 = [
    "@ocaml//compiler-libs/common",
    "@opam_ppxlib//lib/ppxlib"
]

#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(  ##
    name       = "ppx_optcomp_light",
    ns         = "ppx_optcomp_light",
    manifest = [
        ":Ppx_optcomp_light",
        ":Properties"
    ],
)

######################## Modules & Signatures ########################
ocaml_module(
    name          = "Ppx_optcomp_light",
    struct        = "ppx_optcomp_light.ml",
    deps          = DEPS_1 + [
        ":Properties"
    ],
)

ocaml_module(
    name          = "Properties",
    struct        = "properties.ml",
    deps          = DEPS_1,
)

